# jasp

./: .gitignore  CMakeLists.txt  README.md
basis/: 3-21G  4-31G  6-31G  STO-2G  STO-3G  STO-6G
cmake/Modules/: FindMKL.cmake
examples/: CH4.gjf  H2O.gjf  benzene.gjf
src/: atom.cpp  atom.h  bas_set.cpp  bas_set.h  basis.cpp  basis.h  constant.h  eigen_sym.cpp  eigen_sym.h  env.cpp  env.h  gauss.cpp  gauss.h  main.cpp  mathfun.cpp  mathfun.h  matrix.h  matrix_non_mkl.cpp  matrix_non_mkl.h  molecule.cpp  molecule.h  qc_int.cpp  qc_int.h  rhf.cpp  rhf.h  scf.cpp  scf.h  stropt.cpp  stropt.h  type.hpp  vector.h
